chore: fix body overflow issue in loader

--- a/apps/creatives/src/app/globals.css
+++ b/apps/creatives/src/app/globals.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 @layer components {
-  #parent {
+  body {
     overflow-y: hidden;
   }
 
